plugins {
    id 'com.android.application'
}
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-kapt'
apply plugin: 'kotlin-android-extensions'

android {
    compileSdkVersion 30
    buildToolsVersion "30.0.3"

    defaultConfig {
        applicationId "com.example.picture"
        minSdkVersion 26
        targetSdkVersion 30
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    buildFeatures {
        dataBinding true
    }
}

dependencies {

    implementation fileTree(include: ['*.jar','*.aar'], dir: 'libs')
    implementation 'androidx.appcompat:appcompat:1.3.0'
    implementation 'com.google.android.material:material:1.2.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
    testImplementation 'junit:junit:4.+'
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
    implementation "androidx.core:core-ktx:+"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
    //lifecycle
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    api "androidx.lifecycle:lifecycle-runtime:$lifecycleVersion"
    api "androidx.lifecycle:lifecycle-common-java8:$lifecycleVersion"
    api "androidx.lifecycle:lifecycle-viewmodel:$lifecycleVersion"
    api "androidx.lifecycle:lifecycle-livedata:$lifecycleVersion"
    api "androidx.navigation:navigation-runtime:$navigationVersion"
    implementation 'androidx.databinding:databinding-adapters:7.1.0-alpha04'

    // retrofit and okhttp
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
    implementation 'com.squareup.retrofit2:converter-moshi:2.6.0'
    // paging
    implementation 'androidx.paging:paging-runtime-ktx:2.1.2'
    implementation 'androidx.paging:paging-rxjava2-ktx:2.1.2'
    // misc
    implementation 'com.squareup.picasso:picasso:2.71828'
    implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
    //logging
    implementation 'org.slf4j:slf4j-api:1.7.25'
    implementation 'ch.qos.logback:logback-core:1.2.3'
    implementation 'ch.qos.logback:logback-classic:1.2.3'
    implementation "org.jetbrains.anko:anko:0.10.5"
    implementation 'org.jetbrains.anko:anko-commons:0.10.5'
}
repositories {
    mavenCentral()
}
kotlin {
    experimental {
        coroutines "enable"
    }
}